name:                haskell-coop
version:             0.1.0.0
cabal-version:       >=1.10
synopsis:            A library for programming with effectful runners in Haskell
license:             MIT
license-file:        LICENSE.md
author:              Danel Ahman
maintainer:          danel.ahman@eesti.ee
copyright:           (c) 2019 Danel Ahman
category:            Control
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
homepage:            https://github.com/danelahman/haskell-coop
bug-reports:         https://github.com/danelahman/haskell-coop/issues

description:
  An experimental library for programming with effectful runners in Haskell, 
  based on ongoing research of [Danel Ahman](https://danel.ahman.ee)
  and [Andrej Bauer](http://www.andrej.com). See [Control.Runner](Control-Runner.html)
  and [Control.SignalRunner](Control-SignalRunner.html) for details.

library
  exposed-modules:
    Control.Runner,
    Control.SignalRunner,
    Control.Runner.MLFPStateFwd,
    Control.Runner.FileIO,
    Control.Runner.FileIOAndMLState,
    Control.Runner.OldFileIO,
    Control.Runner.FPState,
    Control.Runner.MLState,
    Control.Runner.Ambients,
    Control.Runner.MLFPState,
    Control.Runner.IntState,
    Control.SignalRunner.ExcMLState,
    Control.SignalRunner.MonotonicMLState,
    Control.SignalRunner.SignalMLState
  default-extensions:
    DataKinds,
    DeriveFunctor,
    GADTs,
    GeneralizedNewtypeDeriving,
    RankNTypes,
    TypeFamilies,
    TypeOperators,
    EmptyCase,
    FlexibleContexts,
    PolyKinds,
    KindSignatures
  build-depends:
    base >=4.12 && <4.13,
    freer-simple >=1.2 && <1.3,
    mtl >=2.2 && <2.3,
    bytestring >=0.10 && <0.11
  hs-source-dirs:
    src
  default-language:
    Haskell2010